<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andreimuja.electricianIndex.IndexNou">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nume"
        android:hint="@string/nume"
        android:inputType="text"/>

    <EditText
        android:id="@+id/numarKilowati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nume"
        android:hint="@string/hintNr"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/numarKilowati">

        <RadioButton
            android:id="@+id/cititRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citit"/>

        <RadioButton
            android:id="@+id/estimatRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimat" />
    </RadioGroup>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup" />

    <Button
        android:id="@+id/adaugaB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:onClick="adauga"
        android:text="@string/adauga"
        android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>
